--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "gatsby": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-source-contentful": "^8.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
